@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.5.0
 
-13 October 2017
+17 October 2017
 
 
 1. Introduction
@@ -160,6 +160,8 @@ None
 --------------
 The GSkyRegionMap class was added to handle arbitrary sky regions defined using
 a FITS file map. All positive pixels will define the region (#1121).
+
+The GNdarray class is now used to store GSkyMap pixels (#1729).
 
 
 13. Support module
